# informatics-lab-assignments

./: .gitignore  ArraySequence.h  ArraySequence_previous_version.h  DynamicArray.h  Error.cpp  Error.h  ImmutableArraySequence.h  ImmutableListSequence.h  Interface.cpp  Interface.h  LinkedList.h  ListSequence.h  MutableArraySequence.h  MutableListSequence.h  Sequence.h  Tests.cpp  Tests.h  main.cpp
lab2-cpp-sequence-adt/: CMakeLists.txt
lab2-cpp-sequence-adt/src/: ArraySequence.h  ImmutableListSequence.h  LinkedList.h  ListSequence.h  Tests.h
lab3-cpp-deque-container/: CMakeLists.txt
lab3-cpp-deque-container/src/: Deque.h  DequeArray.h  DequeList.h  RingDeque.h  SpeedCompare.cpp  SpeedCompare.h  SpeedCompare_prev.cpp  Test.cpp  Test.h  TestingRingDeque.cpp  TestingRingDeque.h  UI.cpp  UI.h  main.cpp
lab3-cpp-deque-container/src/Sequence/: ArraySequence.h  DynamicArray.h  LinkedList.h  ListSequence.h  Sequence.h
lab4-cpp-trees/: CMakeLists.txt
lab4-cpp-trees/src/: AVLTree.h  BST.h  Compare.cpp  Compare.h  Person.h  Test.cpp  Test.h  UI.cpp  main.cpp
lab4-cpp-trees/src/Sequence/: CustomErrors.cpp  CustomErrors.h  DynamicArray.h
src/: ArraySequence.h  CustomErrors.cpp  CustomErrors.h  DynamicArray.h  ImmutableArraySequence.h  ImmutableListSequence.h  Interface.cpp  Interface.h  Interface_previous.cpp  Interface_previous.h  LinkedList.h  ListSequence.h  Sequence.h  Tests.cpp  Tests.h  Wrapper.tpp  main.cpp
